# prop-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build.yml  lint.yml  test.yml
proportion_calculator/: __init__.py  cli.py
